--- a/Confectionery/wwwroot/css/site.css
+++ b/Confectionery/wwwroot/css/site.css
@@ -116,3 +116,13 @@ body {
 .bottom-rule {
     border-bottom: 1px solid lightgray;
 }
+#FInfoProduct {
+    margin-top: 7em;
+}
+#CarouselTopInfo {
+    margin-top: 4em;
+}
+.ButtonDelete {
+    height: 3em;
+    width: 10em;
+}
