--- a/Confectionery/Views/User/Account.cshtml
+++ b/Confectionery/Views/User/Account.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Confectionery.ViewModels
+@model UserViewModel
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" asp-append-version="true" />
