--- a/Confectionery/Views/User/Bascet.cshtml
+++ b/Confectionery/Views/User/Bascet.cshtml
@@ -78,12 +78,11 @@
 @section pageScripts
     {
         <script>
-                $('#ButtonOrder').on('click',function(e){
+            $('#ButtonOrder').on('click',function(e){
             e.preventDefault();
             $.ajax({
                 type: "POST",
-                url: '@Url.Action("Order","User")',
-                data: null,
+                url: '@Url.Action("AddOrder","User")',
                 success: function(){
                     Swal.fire({
                     icon: 'success',
