Fix bags and add log out

--- a/Confectionery/Views/Home/Main.cshtml
+++ b/Confectionery/Views/Home/Main.cshtml
@@ -57,7 +57,7 @@
         </div>
         <div class="col-6 col-lg-12 align-items-center justify-content-center top-100 mt-lg-0 mx-lg-1 d-lg-none d-xl-none d-xxl-none ">
             <div class="border border-white border-1 p-2 ShowLg">
-                <img src="https://avatars.mds.yandex.net/i?id=1b2d704a6659481cd6a6f2f850be3d326323d45f-6946731-images-thumbs&n=13" class="w-100"  alt="...">
+                <img src="https://o-tendencii.com/uploads/posts/2022-02/1645852108_55-o-tendencii-com-p-belii-svadebnii-tort-foto-56.jpg" class="w-100"  alt="...">
             </div>
             <p id='Wedding' class="text-center fs-3">Свадьба</p>
         </div>
