--- a/Confectionery/Views/User/Bascet.cshtml
+++ b/Confectionery/Views/User/Bascet.cshtml
@@ -52,23 +52,12 @@
           </div>
         </div>
         }
-        @*<div class="card mb-4">
-          <div class="card-body p-4 d-flex flex-row">
-            <div class="form-outline flex-fill">
-              <input type="text" id="form1" class="form-control form-control-lg" />
-              <label class="form-label" for="form1">Discound code</label>
-            </div>
-            <button type="button" class="btn btn-outline-warning btn-lg ms-3">Подтвердить код</button>
-          </div>
-        </div>*@
-
         <div class="card">
           <div class="card-body row text-center d-flex">
             <button id="ButtonOrder"  type="submit" class="btn btn-warning btn-block btn-lg text-white col-12 col-md-3 col-lg-2 m-auto">Заказать</button>
-            <h5 class="col-12 col-md-9 col-lg-10 m-auto mt-2">Общая сумма заказа @Math.Round(Model.Sum(x => x.Price * x.AmountSweetStaff),2) рб</h5>
+            <h5 id='sum_cost'class="col-12 col-md-9 col-lg-10 m-auto mt-2">Общая сумма заказа @Math.Round(Model.Sum(x => x.Price * x.AmountSweetStaff),2) рб</h5>
           </div>
         </div>
-
       </div>
     </div>
   </div>
@@ -79,23 +68,33 @@
     {
         <script>
             $('#ButtonOrder').on('click',function(e){
+
+            var classMatcher = /(?:^|\s)card rounded-3 mb-4(?:\s|$)/;
+            var els = document.getElementsByTagName('*');
+            for (var i=els.length;i--;){
+              if (classMatcher.test(els[i].className)){
+                els[i].parentNode.removeChild(els[i]);
+              }
+            }
+
             e.preventDefault();
             $.ajax({
                 type: "POST",
                 url: '@Url.Action("AddOrder","User")',
                 success: function(){
                     Swal.fire({
-                    icon: 'success',
-                    title: 'Success add order',
-                    })
+                        icon: 'success',
+                        title: 'Success add order',
+                    });
+                    document.getElementById("sum_cost").textContent = "Общая сумма заказа " +  0 + " pб";
                 },
                 error : function(){
-                    Swal.fire({
-                    icon: 'error',
-                    title: 'Error add order',
-                    }) 
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error add order',
+                    });
                 }
             });
         });                            
         </script>
-}
+};
