--- a/Confectionery/Views/Home/Main.cshtml
+++ b/Confectionery/Views/Home/Main.cshtml
@@ -5,7 +5,7 @@
     <img src="" class="c"/>
 </div>
 
-<div id="CarouselTopInfo" class="carousel slide container-lg mt-lg-5" data-bs-ride="carousel">
+<div id="CarouselTopInfo" class="carousel slide mt-lg-5 m-auto CaruselScale" data-bs-ride="carousel">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#CarouselTopInfo" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#CarouselTopInfo" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -13,24 +13,21 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="https://avatars.mds.yandex.net/i?id=d0d7d19e39a3c782c1adde3ec4e3a30160ea1945-5097070-images-thumbs&n=13" class="d-block container-lg rounded-3" alt="...">
-            <div class="carousel-caption d-none d-sm-block fs-4">
-                <h5>[data]Discount</h5><!-- TODO Zoom text-->
-                <p>[data]Info in sweet stuff</p>
+            <img src="https://get.wallhere.com/photo/4816x3456-px-cupcakes-desserts-food-orange-fruit-sprinkles-1209703.jpg" style="object-fit: fill; width: 100%; height: 100%;" class="rounded-3" alt="...">
+            <div class="carousel-caption d-sm-block fs-4">
+                <h4>Наши лучшие работы</h4><!-- TODO Zoom text-->
             </div>
         </div>
         <div class="carousel-item">
-            <img src="https://avatars.mds.yandex.net/i?id=d0d7d19e39a3c782c1adde3ec4e3a30160ea1945-5097070-images-thumbs&n=13" class="d-block container-lg rounded-3" alt="...">
+            <img src="https://o-tendencii.com/uploads/posts/2022-02/1645891371_37-o-tendencii-com-p-ochen-krasivie-pirozhnie-foto-40.jpg" style="object-fit: fill; width: 100%; height: 100%;" class="container-lg rounded-3" alt="...">
             <div class="carousel-caption d-none d-sm-block">
-                <h5>[data]Discount</h5>
-                <p>[data]Info in sweet stuff</p>
+                <h4>Наши лучшие работы</h4><!-- TODO Zoom text-->
             </div>
         </div>
         <div class="carousel-item">
-            <img src="https://avatars.mds.yandex.net/i?id=d0d7d19e39a3c782c1adde3ec4e3a30160ea1945-5097070-images-thumbs&n=13" class="d-block container-lg rounded-3" alt="...">
+            <img src="https://files.wallpaperpass.com/2019/10/food%20wallpaper%20108%20-%206668x4992.jpg" style="object-fit: fill; width: 100%; height: 100%;" class="container-lg rounded-3" alt="...">
             <div class="carousel-caption d-none d-sm-block">
-                <h5>[data]Discount</h5>
-                <p>[data]Info in sweet stuff</p>
+                <h4>Наши лучшие работы</h4><!-- TODO Zoom text-->
             </div>
         </div>
     </div>
@@ -49,48 +46,49 @@
 </div>
 <div class="container overflow-hidden mt-lg-4" style="width: 100%;">
     <div class="row gx-5 gy-lg-5 pt-4 pt-lg-5">
-        <div class="col-6 col-lg-7 align-self-center justify-content-center p-lg-5 py-lg-0 ms-lg-3">
+        <div class="col-6 col-lg-7 align-self-center justify-content-center p-lg-5 py-lg-0 ms-lg-3 CardZoom">
             <div class="border border-white border-lg p-2 ShowLg">
-                <img src="https://avatars.mds.yandex.net/i?id=1b2d704a6659481cd6a6f2f850be3d326323d45f-6946731-images-thumbs&n=13" class="w-100"  alt="...">
+                <img src="https://krot.info/uploads/posts/2022-06/thumbs/1655908594_46-krot-info-p-otkritka-kheppi-bezdei-krasivie-46.jpg" class="w-100"  alt="...">
             </div>
             <p id='Bithday' class="text-center fs-3">День рождения</p>
         </div>
-        <div class="col-6 col-lg-12 align-items-center justify-content-center top-100 mt-lg-0 mx-lg-1 d-lg-none d-xl-none d-xxl-none ">
+        <div class="col-6 col-lg-12 align-items-center justify-content-center top-100 mt-lg-0 mx-lg-1 d-lg-none d-xl-none d-xxl-none CardZoom">
             <div class="border border-white border-1 p-2 ShowLg">
-                <img src="https://o-tendencii.com/uploads/posts/2022-02/1645852108_55-o-tendencii-com-p-belii-svadebnii-tort-foto-56.jpg" class="w-100"  alt="...">
+                <img src="https://o-tendencii.com/uploads/posts/2022-03/1646082513_45-o-tendencii-com-p-prazdnichnii-tort-na-den-rozhdeniya-foto-49.jpg" class="w-100"  alt="...">
             </div>
             <p id='Wedding' class="text-center fs-3">Свадьба</p>
         </div>
         <div class="col-lg-4">
-            <div class="col-6 col-lg-12 align-items-center justify-content-center top-100 mt-lg-0 mx-lg-1 d-none d-lg-block">
+            <div class="col-6 col-lg-12 align-items-center justify-content-center top-100 mt-lg-0 mx-lg-1 d-none d-lg-block CardZoom">
                 <div class="border border-white border-1 p-2 ShowLg">
-                    <img src="https://avatars.mds.yandex.net/i?id=1b2d704a6659481cd6a6f2f850be3d326323d45f-6946731-images-thumbs&n=13" class="w-100"  alt="...">
+                    <img src="https://o-tendencii.com/uploads/posts/2022-03/1646143443_44-o-tendencii-com-p-torti-na-svadbu-krasivie-foto-45.jpg" class="w-100"  alt="...">
                 </div>
                 <p id='Wedding' class="text-center fs-3">Свадьба</p>
             </div>
-            <div class="col-12 col-lg-9 mt-lg-2 py-lg-5 mx-lg-3 pb-lg-0 align-items-center justify-content-center">
+            <div class="col-12 col-lg-9 mt-lg-2 py-lg-5 mx-lg-3 pb-lg-0 align-items-center justify-content-center CardZoom">
                 <div class="border border-white border-1 p-2 ShowLg">
-                    <img src="https://avatars.mds.yandex.net/i?id=1b2d704a6659481cd6a6f2f850be3d326323d45f-6946731-images-thumbs&n=13" class="w-100"  alt="...">
+                    <img src="https://novyjgod.com/wp-content/uploads/2018/11/christmas-cakes-new-year-sweet-novyi-god-tort-ukrashenie-kre.jpg" class="w-100"  alt="...">
                 </div>
                 <p id='NewYear' class="text-center fs-1">Новый год</p>
             </div>
         </div>
     </div>
     <div class="row gx-5 gy-5">
-        <div class="col-6 col-lg-4 align-self-center align-items-center justify-content-center px-lg-5 mx-lg-5 pb-lg-5 mt-lg-2">
+        <div class="col-6 col-lg-4 align-self-center align-items-center justify-content-center px-lg-5 mx-lg-5 pb-lg-5 mt-lg-2 CardZoom">
             <div class="border border-white border-1 p-2 ShowLg">
-                <img src="https://avatars.mds.yandex.net/i?id=1b2d704a6659481cd6a6f2f850be3d326323d45f-6946731-images-thumbs&n=13" class="w-100"  alt="...">
+                <img src="https://o-tendencii.com/uploads/posts/2022-02/1645875829_2-o-tendencii-com-p-tort-na-paskhu-foto-2.jpg" class="w-100"  alt="...">
             </div>
             <p id='Easter' class="text-center fs-3">Пасха</p>
         </div>
-        <div class="col-6 col-lg-3 align-self-center align-items-center justify-content-center mb-lg-5 mx-lg-5 pt-lg-2">
+        <div class="col-6 col-lg-3 align-self-center align-items-center justify-content-center mb-lg-5 mx-lg-5 pt-lg-2 CardZoom">
             <div class="border border-white border-1 p-2 ShowLg">
-                <img src="https://avatars.mds.yandex.net/i?id=1b2d704a6659481cd6a6f2f850be3d326323d45f-6946731-images-thumbs&n=13" class="w-100"  alt="...">
+                <img src="https://100kupon.ru/assets/gallery/192/2311.jpg" class="w-100"  alt="...">
             </div>
             <p id='Marchth' class="text-center fs-3">8 марта</p>
         </div>
     </div>
 </div>
+
 
 <div class="pt-5 container-fluid">
     <div class="my-4 px-4 h2 text-center text-md-start row-cols-md-12 my-sm-5">Сладости</div>
