--- a/Confectionery/Views/Home/Product.cshtml
+++ b/Confectionery/Views/Home/Product.cshtml
@@ -52,11 +52,11 @@
                 </button>
 
             </div>
-        <div class="row p-0 m-0 text-center ">
+        <div class="row p-0 m-0 text-center">
 
         </div>
     </div>
-</form><
+</form>
 
 @section pageScripts
 {
