--- a/Confectionery/Views/User/Bascet.cshtml
+++ b/Confectionery/Views/User/Bascet.cshtml
@@ -41,7 +41,7 @@
                 </div>
               </div>
               <div class="col-md-3 col-lg-3 col-xl-3">
-                <h5 class="mb-0 mt-3 mt-md-0">Стоимость: @descorder.Price рб</h5>
+                <h5 class="mb-0 mt-3 mt-md-0">Стоимость: @{Write(descorder.Price * descorder.AmountSweetStaff);} рб</h5>
               </div>
                 <div class="text-center d-flex w-100 mt-3 mt-md-0">
                         <div class="m-auto col-md-4 col-6  h-100">
