--- a/Confectionery/Views/Shared/_Layout.cshtml
+++ b/Confectionery/Views/Shared/_Layout.cshtml
@@ -26,13 +26,22 @@
                         </li>
                         @if (User.Identity is not null && User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item">
-                                <a id="itemNavBar" class="nav-link fs-2" asp-area="" asp-controller="User" asp-action="Account">Account</a>
-                            </li>
-                            <li class="nav-item">
+                            if (User.IsInRole("Admin"))
+                            {
+                                <li class="nav-item">
+                                    <a id="itemNavBar" class="nav-link fs-2" asp-area="" asp-controller="Admin" asp-action="PanelCompany">Admin panel</a>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="nav-item">
+                                    <a id="itemNavBar" class="nav-link fs-2" asp-area="" asp-controller="User" asp-action="Account">Account</a>
+                                </li>
+                                <li class="nav-item">
                                     <a id="itemNavBar" class="nav-link fs-2" asp-area="" asp-controller="User" asp-action="Bascet">Bascet</a>
-                            </li>
-                        }
+                                </li>
+                            }
+                        }                     
                         else
                         {
                             <li class="nav-item">
